.kubernetes/overlays/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: green-blog-co-virtual-service
  annotations:
    external-dns.alpha.kubernetes.io/target: "k8s-istiosys-istioing-b96acd1b6c-26236385.ap-northeast-2.elb.amazonaws.com"
spec:
  hosts:
    - "green-blog.co"
  gateways:
    - green-blog-co-gateway
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: green-blog-co-service
            port:
               number: 3000
